apps/athens/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: athens
  namespace: athens
spec:
  type: ClusterIP
  selector:
    app: athens
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
